Agero_CloudPod_cf_v05.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Build Cloud Pod",
    "Parameters": {
        "0VpcId": {
            "Type": "String",
            "Description": "VPC Id",
            "Default": "vpc-60d61305"
        },
        "01Podname": {
            "Type": "String",
            "Default": "Pod1",
            "Description": "Name the pod"
        },
        "1SubnetNumber": {
            "Type": "Number",
            "MinValue": "0",
            "MaxValue": "255",
            "Description": "3rd Octact of Subnet for Network of the Pod, if you enter 103 then the POD will be a 10.201.103.0/24 network",
            "Default": "103"
        },
        "2MakeLBForA00": {
            "Default": "0",
            "Description": "Create the LB for A00 Server (0 = No, 1 = Yes)",
            "Type": "Number",
            "MinValue": "0",
            "MaxValue": "1"
        },
        "3MakeLBForA01": {
            "Default": "0",
            "Description": "Create the LB for A01 Server (0 = No, 1 = Yes)",
            "Type": "Number",
            "MinValue": "0",
            "MaxValue": "1"
        },
        "4MakeLBForB": {
            "Default": "0",
            "Description": "Create the LB for B Server (0 = No, 1 = Yes)",
            "Type": "Number",
            "MinValue": "0",
            "MaxValue": "1"
        }
        },
        "Conditions": {
            "CreateLB1" : {"Fn::Equals" : [{"Ref": "2MakeLBForA00"}, "1"]},
            "CreateLB2" : {"Fn::Equals" : [{"Ref": "3MakeLBForA01"}, "1"]},
            "CreateLB3" : {"Fn::Equals" : [{"Ref": "4MakeLBForB"}, "1"]}
        },
        "Mappings": {
        "AWSInstanceType2Arch": {
            "m1.small": {
                "Arch": "64"
            },
            "m1.medium": {
                "Arch": "64"
            },
            "m1.large": {
                "Arch": "64"
            },
            "m1.xlarge": {
                "Arch": "64"
            },
            "m2.xlarge": {
                "Arch": "64"
            },
            "m2.2xlarge": {
                "Arch": "64"
            },
            "m2.4xlarge": {
                "Arch": "64"
            },
            "c1.medium": {
                "Arch": "64"
            },
            "c1.xlarge": {
                "Arch": "64"
            }
        },
        "AWSRegionArch2AMI": {
            "us-east-1": {
                "64": "ami-d1363fb8"
            },
            "us-west-1": {
                "64": "ami-c2cef187"
            },
            "us-west-2": {
                "64": "ami-16197726"
            },
            "eu-west-1": {
                "64": "ami-fde21e8a"
            },
            "ap-southeast-1": {
                "64": "ami-08f5a45a"
            },
            "ap-southeast-2": {
                "64": "ami-7377ee49"
            },
            "ap-northeast-1": {
                "64": "ami-514e3e50"
            },
            "sa-east-1": {
                "64": "ami-35319228"
            }
        }
        },
        "Resources": {
            "EC2Subnet": {
                "Type": "AWS::EC2::Subnet",
                "Properties": {
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "CidrBlock": {
                        "Fn::Join": [
                            "",
                            [
                                "10.201.",
                                {
                                    "Ref": "1SubnetNumber"
                                },
                                ".1/26"
                            ]
                        ]
                    },
                    "AvailabilityZone": {
                        "Fn::Select": [
                            "0",
                            {
                                "Fn::GetAZs": ""
                            }
                        ]
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "RDS1Subnet": {
                "Type": "AWS::EC2::Subnet",
                "Properties": {
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "CidrBlock": {
                        "Fn::Join": [
                            "",
                            [
                                "10.201.",
                                {
                                    "Ref": "1SubnetNumber"
                                },
                                ".64/28"
                            ]
                        ]
                    },
                    "AvailabilityZone": {
                        "Fn::Select": [
                            "0",
                            {
                                "Fn::GetAZs": ""
                            }
                        ]
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "RDS2Subnet": {
                "Type": "AWS::EC2::Subnet",
                "Properties": {
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "CidrBlock": {
                        "Fn::Join": [
                            "",
                            [
                                "10.201.",
                                {
                                    "Ref": "1SubnetNumber"
                                },
                                ".80/28"
                            ]
                        ]
                    },
                    "AvailabilityZone": {
                        "Fn::Select": [
                            "2",
                            {
                                "Fn::GetAZs": ""
                            }
                        ]
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "RouteTable": {
                "Type": "AWS::EC2::RouteTable",
                "Properties": {
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "S1RouteTableAssociation": {
                "Type": "AWS::EC2::SubnetRouteTableAssociation",
                "DeletionPolicy": "Delete",
                "Properties": {
                    "SubnetId": {
                        "Ref": "EC2Subnet"
                    },
                    "RouteTableId": {
                        "Ref": "RouteTable"
                    }
                }
            },
            "S2RouteTableAssociation": {
                "Type": "AWS::EC2::SubnetRouteTableAssociation",
                "DeletionPolicy": "Delete",
                "Properties": {
                    "SubnetId": {
                        "Ref": "RDS1Subnet"
                    },
                    "RouteTableId": {
                        "Ref": "RouteTable"
                    }
                }
            },
            "S3RouteTableAssociation": {
                "Type": "AWS::EC2::SubnetRouteTableAssociation",
                "DeletionPolicy": "Delete",
                "Properties": {
                    "SubnetId": {
                        "Ref": "RDS2Subnet"
                    },
                    "RouteTableId": {
                        "Ref": "RouteTable"
                    }
                }
            },
            "RDSGroup1": {
                "Type": "AWS::RDS::DBSubnetGroup",
                "Properties": {
                    "DBSubnetGroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Group 1 in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "SubnetIds": [
                        {
                            "Ref": "RDS1Subnet"
                        },
                        {
                            "Ref": "RDS2Subnet"
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "RDSGroup2": {
                "Type": "AWS::RDS::DBSubnetGroup",
                "Properties": {
                    "DBSubnetGroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Group 2 in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "SubnetIds": [
                        {
                            "Ref": "RDS2Subnet"
                        },
                        {
                            "Ref": "RDS1Subnet"
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "myNetworkAcl": {
                "Type": "AWS::EC2::NetworkAcl",
                "Properties": {
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "myNetworkAclEntry": {
                "Type": "AWS::EC2::NetworkAclEntry",
                "Properties": {
                    "NetworkAclId": {
                        "Ref": "myNetworkAcl"
                    },
                    "RuleNumber": "100",
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "Egress": "true",
                    "CidrBlock": "172.16.0.0/24"
                }
            },
            "EC2SubnetNetworkAclAssociation": {
                "Type": "AWS::EC2::SubnetNetworkAclAssociation",
                "Properties": {
                    "SubnetId": {
                        "Ref": "EC2Subnet"
                    },
                    "NetworkAclId": {
                        "Ref": "myNetworkAcl"
                    }
                }
            },
            "RDS1SubnetNetworkAclAssociation": {
                "Type": "AWS::EC2::SubnetNetworkAclAssociation",
                "Properties": {
                    "SubnetId": {
                        "Ref": "RDS1Subnet"
                    },
                    "NetworkAclId": {
                        "Ref": "myNetworkAcl"
                    }
                }
            },
            "RDS2SubnetNetworkAclAssociation": {
                "Type": "AWS::EC2::SubnetNetworkAclAssociation",
                "Properties": {
                    "SubnetId": {
                        "Ref": "RDS2Subnet"
                    },
                    "NetworkAclId": {
                        "Ref": "myNetworkAcl"
                    }
                }
            },
            "DbSecurityByEC2SecurityGroup": {
                "Type": "AWS::RDS::DBSecurityGroup",
                "Properties": {
                    "EC2VpcId": {
                        "Ref": "0VpcId"
                    },
                    "DBSecurityGroupIngress": {
                        "EC2SecurityGroupId": {
                            "Ref": "OracleSecurityGroup"
                        }
                    },
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Security Group Oracle 1 in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "OracleSecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Security Group Oracle in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "tcp",
                            "FromPort": "1521",
                            "ToPort": "1521",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "DbSecurity2ByEC2SecurityGroup": {
                "Type": "AWS::RDS::DBSecurityGroup",
                "Properties": {
                    "EC2VpcId": {
                        "Ref": "0VpcId"
                    },
                    "DBSecurityGroupIngress": {
                        "EC2SecurityGroupId": {
                            "Ref": "OracleSecurityGroup2"
                        }
                    },
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Security Group Oracle State Farm in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "OracleSecurityGroup2": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Security Group Oracle State Farm in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "tcp",
                            "FromPort": "1521",
                            "ToPort": "1521",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "DbSecurity3ByEC2SecurityGroup": {
                "Type": "AWS::RDS::DBSecurityGroup",
                "Properties": {
                    "EC2VpcId": {
                        "Ref": "0VpcId"
                    },
                    "DBSecurityGroupIngress": {
                        "EC2SecurityGroupId": {
                            "Ref": "MSSQLSecurityGroup"
                        }
                    },
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Security Group MSSQL in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "MSSQLSecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Security Group MSSQL in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "tcp",
                            "FromPort": "1433",
                            "ToPort": "1433",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "OracleParamGroup": {
                "Type": "AWS::RDS::DBParameterGroup",
                "Properties": {
                    "Description": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Parameter Group for Oracle in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Family": "oracle-se1-11.2",
                    "Parameters": {
                        "recyclebin": "Off"
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "OracleParamGroup2": {
                "Type": "AWS::RDS::DBParameterGroup",
                "Properties": {
                    "Description": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Parameter Group for Oracle State Farm in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Family": "oracle-se1-11.2",
                    "Parameters": {
                        "recyclebin": "Off"
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "MSSQLParamGroup": {
                "Type": "AWS::RDS::DBParameterGroup",
                "Properties": {
                    "Description": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Parameter Group for MSSQL in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Family": "sqlserver-se-11.0",
                    "Parameters": {
                        "1204": "0"
                    },
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "A0SeriesInstanceSecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "A0 Series Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "A1SeriesInstanceSecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "A1 Series Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "BSeriesInstanceSecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "B Series Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "CSeriesInstanceSecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "C Series Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "DSeriesInstanceSecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "D Series Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "ESeriesInstanceSecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "E Series Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "LB1SecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Condition": "CreateLB1",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "LB1 A00 Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "ElasticLoadBalancerA00": {
                "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
                "Condition": "CreateLB1",
                "Properties": {
                    "LoadBalancerName": {
                        "Fn::Join": [
                            "",
                            [
                                "LB1-A00-",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Scheme": "internal",
                    "Subnets": [
                        {
                            "Ref": "EC2Subnet"
                        }
                    ],
                    "Listeners": [
                        {
                            "LoadBalancerPort": "443",
                            "InstancePort": 443,
                            "Protocol": "TCP"
                        }
                    ],
                    "HealthCheck": {
                        "Target": {
                            "Fn::Join": [
                                "",
                                [
                                    "HTTP:",
                                    443,
                                    "/"
                                ]
                            ]
                        },
                        "HealthyThreshold": "3",
                        "UnhealthyThreshold": "5",
                        "Interval": "30",
                        "Timeout": "5"
                    },
                    "SecurityGroups": [
                        {
                            "Ref": "LB1SecurityGroup"
                        }
                    ]
                }
            },
            "LB2SecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Condition": "CreateLB2",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "LB2 A01 Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "ElasticLoadBalancerA01": {
                "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
                "Condition": "CreateLB2",
                "Properties": {
                    "LoadBalancerName": {
                        "Fn::Join": [
                            "",
                            [
                                "LB2-A01-",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Scheme": "internal",
                    "Subnets": [
                        {
                            "Ref": "EC2Subnet"
                        }
                    ],
                    "Listeners": [
                        {
                            "LoadBalancerPort": "443",
                            "InstancePort": 443,
                            "Protocol": "TCP"
                        }
                    ],
                    "HealthCheck": {
                        "Target": {
                            "Fn::Join": [
                                "",
                                [
                                    "HTTP:",
                                    443,
                                    "/"
                                ]
                            ]
                        },
                        "HealthyThreshold": "3",
                        "UnhealthyThreshold": "5",
                        "Interval": "30",
                        "Timeout": "5"
                    },
                    "SecurityGroups": [
                        {
                            "Ref": "LB2SecurityGroup"
                        }
                    ]
                }
            },
            "LB3SecurityGroup": {
                "Type": "AWS::EC2::SecurityGroup",
                "Condition": "CreateLB3",
                "Properties": {
                    "GroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "LB3 B Security Group in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "VpcId": {
                        "Ref": "0VpcId"
                    },
                    "SecurityGroupIngress": [
                        {
                            "IpProtocol": "-1",
                            "CidrIp": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "10.201.",
                                        {
                                            "Ref": "1SubnetNumber"
                                        },
                                        ".0/24"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
            "ElasticLoadBalancerB": {
                "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
                "Condition": "CreateLB3",
                "Properties": {
                    "LoadBalancerName": {
                        "Fn::Join": [
                            "",
                            [
                                "LB3-B-",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "Scheme": "internal",
                    "Subnets": [
                        {
                            "Ref": "EC2Subnet"
                        }
                    ],
                    "Listeners": [
                        {
                            "LoadBalancerPort": "443",
                            "InstancePort": 443,
                            "Protocol": "TCP"
                        }
                    ],
                    "HealthCheck": {
                        "Target": {
                            "Fn::Join": [
                                "",
                                [
                                    "HTTP:",
                                    443,
                                    "/"
                                ]
                            ]
                        },
                        "HealthyThreshold": "3",
                        "UnhealthyThreshold": "5",
                        "Interval": "30",
                        "Timeout": "5"
                    },
                    "SecurityGroups": [
                        {
                            "Ref": "LB3SecurityGroup"
                        }
                    ]
                }
            },
        "ServerA0": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "DisableApiTermination": "TRUE",
                "ImageId" : "ami-d1363fb8",
                "InstanceType": "m3.medium",
                "KeyName": "AgeroPod",
                "PrivateIpAddress": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".25"
                        ]
                    ]
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "A0SeriesInstanceSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "Tags" : [
                 {
                    "Key" : "Podname",
                    "Value" : {  "Ref" : "01Podname"}
             }
             ],
            
                "UserData": "TESTINGUSERDATA"
            }
        }
    },
    "Outputs": {
        "APIUserKey": {
            "Value": {
                "Ref": "RouteTable"
            }
        }
    }
}
